#VERSION 0.7.9#

*  Peak_Controller > remove property $c_prefix. renamed property $c_actions to $actions.

*  Peak_Render > modified method baseUrl(). Deprecated $view object variable in views file. Use $this instead.

*  Peak_Render > added method enableCacheStrip() and property $_cache_strip. By default $_cache_strip is false. 

*  Peak_Router > added method setBaseUri() and moved code from __construct() there.

*  Peak_Controller > remove _listActions() from __construct(). Can be called on demand inside controllers child
                     but no more needed each time by handleAction()

*  Peak_Controller > added methods isAction(), isZendAction() and zendAction(). Tweaked handleAction() of
                     controller to support 2 actions name styntax: 
                     ex: _index() or indexAction().
                     Note that _index() syntax have priority over indexAction() syntax.
 

*  Peak_Core > tweaked isController() and isModules() to check for the files instead of listing all controllers.
               It speedup application controllers/modules routing. Controllers and modules still can be listed on demand

*  Peak_View > fixed issue with setRenderEngine() when calling unknow rendering engine.
               Peak_View_Render_Partials is now loaded by default if no engine found.

*  Peak_View_Helpers class renamed to singular as the same for /helpers/ folder

*  Peak_View > added magic method __unset()

*  Peak_View_Render_Partials > fix render() to allow inclusion of partials scripts inside view 
                               without specifying the whole path

*  Peak_Dispatcher > added method reset(), getActions(), getRecursivity(), getAcceptedGlobals(),
                     getRecursivityDepth() and getActionsTriggered().
                     fixed method _listActions() : flush _actions array before retreiving them

*  autoload.php > added application custom loading class. 